--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
 
 
 
-    
+
     <main>
 
-         <section class="home">
+        <section class="home">
             <div class="container-fluid">
                 <div class="row gap-5">
                     <div class="col-12 col-md-5">
-                        <div class="w-100 h-100 d-flex flex-column align-items-start align-items-sm-center  justify-content-center">
+                        <div
+                            class="w-100 h-100 d-flex flex-column align-items-start align-items-sm-center  justify-content-center">
                             <h1 class="header-title">fresh coffee in the morning</h1>
                             <a class="btn border-own mt-3" href="#">Buy One Now</a>
                         </div>
@@ -82,7 +83,55 @@
                     <img class="w-25" src="./img/home-img-3.png" onclick="slideShow('./img/home-img-3.png')" alt="">
                 </div>
             </div>
-         </section>
+        </section>
+
+        <section class="about-us my-5">
+            <div class="container-fluid">
+                <h2 class="text-center h2-title mb-5">About <span>Us</span></h2>
+
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="w-100 h-100 d-flex align-items-center justify-content-center">
+                            <img class="w-75" src="./img/about-img.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-6">
+                        <div class="w-100 h-100 d-flex flex-column align-items-start justify-content-center p-5">
+                            <h3 class="fs-2">What's Make Our Coffee Special!</h3>
+                            <p class="my-4">coffee quality is beyond the final product served on your cup. Its quality
+                                springs from the start—the type of coffee beans grown, the region, roasting, and
+                                brewing, down to the actual coffee served right under your nose..
+                            </p>
+                            <a class="btn border-own" href="#">Read More</a>
+                            <div
+                                class="d-flex box-Container  align-items-center justify-content-between gap-3 w-100 mt-5">
+                                <div
+                                    class="w_31 box border-own d-flex flex-column align-items-center justify-content-center p-1">
+                                    <img src="./img/about-icon-1.png" alt="">
+                                    <p class="mt-4">Quality Coffee</p>
+                                </div>
+                                <div
+                                    class="w_31 box border-own d-flex flex-column align-items-center justify-content-center p-1">
+                                    <img src="./img/about-icon-2.png" alt="">
+                                    <p class="mt-4">Our Branches</p>
+                                </div>
+                                <div
+                                    class="w_31 box border-own d-flex flex-column align-items-center justify-content-center p-1">
+                                    <img src="./img/about-icon-3.png" alt="">
+                                    <p class="mt-4">Free Delivery</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </section>
+
+
 
     </main>
 
