--- a/index.html
+++ b/index.html
@@ -132,6 +132,94 @@
         </section>
 
 
+        <section class="our-menu p-5 my-5">
+            <div class="container-fluid">
+                <h2 class="text-center h2-title mb-5"><span>Our</span> Menu</h2>
+
+                <div class="row g-5">
+                    <div class="col-12 col-md-6">
+                        <a href="#">
+                            <div class="w-100  d-flex align-items-center justify-content-center">
+                                <div class="w-75 border-own p-5 menu-boxes">
+                                    <h3 class="fw-bold">Our Special Coffee</h3>
+                                    <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam
+                                        voluptas voluptatibus consequuntur commodi harum, dolores nesciunt voluptatum ea
+                                        enim?</p>
+                                    <p class="fw-bold">PRC : 7.5$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <a href="#">
+                            <div class="w-100  d-flex align-items-center justify-content-center">
+                                <div class="w-75 border-own p-5 menu-boxes">
+                                    <h3 class="fw-bold">Our Special Coffee</h3>
+                                    <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam
+                                        voluptas voluptatibus consequuntur commodi harum, dolores nesciunt voluptatum ea
+                                        enim?</p>
+                                    <p class="fw-bold">PRC : 7.5$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <a href="#">
+                            <div class="w-100  d-flex align-items-center justify-content-center">
+                                <div class="w-75 border-own p-5 menu-boxes">
+                                    <h3 class="fw-bold">Our Special Coffee</h3>
+                                    <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam
+                                        voluptas voluptatibus consequuntur commodi harum, dolores nesciunt voluptatum ea
+                                        enim?</p>
+                                    <p class="fw-bold">PRC : 7.5$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <a href="#">
+                            <div class="w-100  d-flex align-items-center justify-content-center">
+                                <div class="w-75 border-own p-5 menu-boxes">
+                                    <h3 class="fw-bold">Our Special Coffee</h3>
+                                    <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam
+                                        voluptas voluptatibus consequuntur commodi harum, dolores nesciunt voluptatum ea
+                                        enim?</p>
+                                    <p class="fw-bold">PRC : 7.5$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <a href="#">
+                            <div class="w-100  d-flex align-items-center justify-content-center">
+                                <div class="w-75 border-own p-5 menu-boxes">
+                                    <h3 class="fw-bold">Our Special Coffee</h3>
+                                    <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam
+                                        voluptas voluptatibus consequuntur commodi harum, dolores nesciunt voluptatum ea
+                                        enim?</p>
+                                    <p class="fw-bold">PRC : 7.5$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <a href="#">
+                            <div class="w-100  d-flex align-items-center justify-content-center">
+                                <div class="w-75 border-own p-5 menu-boxes">
+                                    <h3 class="fw-bold">Our Special Coffee</h3>
+                                    <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam
+                                        voluptas voluptatibus consequuntur commodi harum, dolores nesciunt voluptatum ea
+                                        enim?</p>
+                                    <p class="fw-bold">PRC : 7.5$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
     </main>
 
