--- a/index.html
+++ b/index.html
@@ -219,6 +219,87 @@
             </div>
         </section>
 
+        <section class="review my-5">
+            <div class="container-fluid">
+                <h2 class="text-center h2-title mb-5">Review</h2>
+                <div id="testimonialCarousel" class="carousel slide position-relative" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <!-- اسلاید اول -->
+                        <div class="carousel-item active">
+                            <div class="card text-center mx-auto" style="width: 70%;">
+                                <div class="card-body">
+                                    <i class="fas fa-quote-left  box-icon_left"></i>
+                                    <i class="fas fa-quote-right  box-icon_right"></i>
+                                    <img src="./img/pic-1.png" class="rounded-circle mb-3" alt="Client"
+                                        style="width: 80px; height: 80px;">
+                                    <h5 class="card-title">John Deo</h5>
+                                    <p class="card-text">Satisfied Client</p>
+                                    <p class="card-text w-50 my-0 mx-auto">"I love the coffee and service provided here.
+                                        Very nice and tasty!"</p>
+                                    <p class="text-warning">★★★★★</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- اسلاید دوم -->
+                        <div class="carousel-item">
+                            <div class="card text-center mx-auto" style="width: 70%;">
+                                <div class="card-body">
+                                    <i class="fas fa-quote-left  box-icon_left"></i>
+                                    <i class="fas fa-quote-right  box-icon_right"></i>
+                                    <img src="./img/pic-2.png" class="rounded-circle mb-3" alt="Client"
+                                        style="width: 80px; height: 80px;">
+                                    <h5 class="card-title">Jane Smith</h5>
+                                    <p class="card-text">Happy Customer</p>
+                                    <p class="card-text">"The ambiance and coffee are amazing. Highly recommended!"</p>
+                                    <p class="text-warning">★★★★★</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- // -->
+                        <div class="carousel-item">
+                            <div class="card text-center mx-auto" style="width: 70%;">
+                                <div class="card-body">
+                                    <i class="fas fa-quote-left  box-icon_left"></i>
+                                    <i class="fas fa-quote-right  box-icon_right"></i>
+                                    <img src="./img/pic-3.png" class="rounded-circle mb-3" alt="Client"
+                                        style="width: 80px; height: 80px;">
+                                    <h5 class="card-title">Jane Smith</h5>
+                                    <p class="card-text">Happy Customer</p>
+                                    <p class="card-text">"The ambiance and coffee are amazing. Highly recommended!"</p>
+                                    <p class="text-warning">★★★★★</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- // -->
+                        <div class="carousel-item">
+                            <div class="card text-center mx-auto" style="width: 70%;">
+                                <div class="card-body">
+                                    <i class="fas fa-quote-left  box-icon_left"></i>
+                                    <i class="fas fa-quote-right  box-icon_right"></i>
+                                    <img src="./img/pic-4.png" class="rounded-circle mb-3" alt="Client"
+                                        style="width: 80px; height: 80px;">
+                                    <h5 class="card-title">Jane Smith</h5>
+                                    <p class="card-text">Happy Customer</p>
+                                    <p class="card-text">"The ambiance and coffee are amazing. Highly recommended!"</p>
+                                    <p class="text-warning">★★★★★</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
     </main>
