--- a/index.html
+++ b/index.html
@@ -325,8 +325,111 @@
             </div>
         </section>
          
-
     </main>
+
+    <footer>
+        <div class="container-fluid">
+            <div class="row g-5">
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="w-100 d-flex flex-column align-items-start justify-content-center">
+                        <h3>Our Branches</h3>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>India</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>India</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>Usa</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>Africa</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>Jpan</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="w-100 d-flex flex-column align-items-start justify-content-center">
+                        <h3>Quick Links</h3>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>Home</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>About</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>Menu</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>Review</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-arrow-right"></i>
+                             <span>Book</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="w-100 d-flex flex-column align-items-start justify-content-center">
+                        <h3>Contact Info</h3>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-phone"></i>
+                             <span>+123-456-7890</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-phone"></i>
+                             <span>+111-222-333</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-envelope"></i>
+                             <span>jalil@gmail.com</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fas fa-envelope"></i>
+                             <span>ali@gmail.com</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="w-100 d-flex flex-column align-items-start justify-content-center">
+                        <h3>Our Branches</h3>
+                        <a href="#" class="btn my-2">
+                            <i class="fab fa-facebook-f"></i>
+                             <span>Facebook</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fab fa-twitter"></i>
+                             <span>Twitter</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fab fa-twitter"></i>
+                             <span>Twitter</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fab fa-instagram"></i>
+                             <span>Instagram</span>
+                        </a>
+                        <a href="#" class="btn my-2">
+                            <i class="fab fa-linkedin"></i>
+                             <span>Linkedin</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <p class="mt-5 text-center">creatd by <span>Reet</span> | Copywright © all rights reserved</p>
+        </div>
+    </footer>
 
 
 
